recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:8: error: ';' expected but 'else' found.
  }else{
   ^PolygonFractal:18: error: expected start of definition
	override def run() {
                 ^PolygonFractal:22: error: Unmatched closing brace '}' ignored here
}
^